--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>안녕하세요</h1>
     <h2>웹 화면 구현 수업을 든는</h2>
     <h3>저는 문지은이라고 합니다.</h3>
+    <h3>오늘 수업에서 많은 것을 배웠습니다.</h3>
     
 </body>
 </html>
